# dx_final_project

rm_description_for_task/launch/: sentry.launch
sentry_chassis_controller/: CMakeLists.txt  package.xml  readme.md  sentry_chassis_controller_plugins.xml
sentry_chassis_controller/config/: sentry_chassis_controller.cfg  sentry_chassis_controller.yaml
sentry_chassis_controller/doc/: readme.md
sentry_chassis_controller/include/sentry_chassis_controller/: kinematics.h  odometry.h  sentry_chassis_controller.h  test_function.h  test_pid.h
sentry_chassis_controller/launch/: start.launch  test_pid.launch
sentry_chassis_controller/src/: choose_testmode.cpp  kinematics.cpp  odometry.cpp  sentry_chassis_controller.cpp  test_function.cpp  test_pid.cpp
simple_chassis_controller/config/: controllers.yaml
simple_chassis_controller/include/simple_chassis_controller/: simple_chassis_controller.h
simple_chassis_controller/src/: simple_chassis_controller.cpp
